- fixed domain and problem - added request

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/jan-dolejsi/ai-planning-painting-mixing#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "nunjucks": "^3.2.0"
+    "nunjucks": "^3.2.0",
+    "request": "^2.88.0"
   }
 }
