steepest ascent search

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ai-planning-painting-mixing",
   "version": "1.0.0",
   "description": "AI Planning demo",
-  "main": "noded.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
